--- a/EmployeeManagement/EmployeeManagement/Views/Shared/_Layout.cshtml
+++ b/EmployeeManagement/EmployeeManagement/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<IdentityUser> signInManager;
 <!DOCTYPE html>
 
 <html>
@@ -20,6 +22,28 @@
             <li class="nav-item">
                 <a href="~/home/create">Create</a>
             </li>
+            @if(signInManager.IsSignedIn(User))
+            {
+                <li class="nav-item">
+                    <form method="post">
+                          <button type="submit" class="btn" style="width:auto"><a href="~/Account/logout">Logout @User.Identity.Name</a></button>
+                    </form>
+                </li>
+
+            }
+            else
+            {
+                
+                <li class="nav-item">
+                <a href="~/Account/login">Login</a>
+                </li>  
+                <li class="nav-item">
+                <a href="~/Account/Register">Register</a>
+                </li>   
+            }
+            @*<li class="nav-item">
+                <a href="~/Account/Register">Register</a>
+            </li>*@
         </ul>
     </nav>
     <div>
